Parser/logs/pbm2lwxl.txt
<86>May 16 00:03:36 userdel[1493117]: delete user 'rooter'
<86>May 16 00:03:36 userdel[1493117]: removed group 'rooter' owned by 'rooter'
<86>May 16 00:03:36 userdel[1493117]: removed shadow group 'rooter' owned by 'rooter'
<86>May 16 00:03:36 groupadd[1493141]: group added to /etc/group: name=rooter, GID=1802
<86>May 16 00:03:36 groupadd[1493141]: group added to /etc/gshadow: name=rooter
<86>May 16 00:03:36 groupadd[1493141]: new group: name=rooter, GID=1802
<86>May 16 00:03:36 useradd[1493164]: new user: name=rooter, UID=1802, GID=1802, home=/root, shell=/bin/bash, from=none
<86>May 16 00:03:36 userdel[1493231]: delete user 'builder'
<86>May 16 00:03:36 userdel[1493231]: removed group 'builder' owned by 'builder'
<86>May 16 00:03:36 userdel[1493231]: removed shadow group 'builder' owned by 'builder'
<86>May 16 00:03:36 groupadd[1493264]: group added to /etc/group: name=builder, GID=1803
<86>May 16 00:03:36 groupadd[1493264]: group added to /etc/gshadow: name=builder
<86>May 16 00:03:36 groupadd[1493264]: new group: name=builder, GID=1803
<86>May 16 00:03:36 useradd[1493312]: new user: name=builder, UID=1803, GID=1803, home=/usr/src, shell=/bin/bash, from=none
/usr/src/in/srpm/pbm2lwxl-0-alt1.qa1.src.rpm: The use of such a license name is ambiguous: GPL
Building target platforms: x86_64
Building for target x86_64
Wrote: /usr/src/in/nosrpm/pbm2lwxl-0-alt1.qa1.nosrc.rpm (w1.gzdio)
Installing pbm2lwxl-0-alt1.qa1.src.rpm
Building target platforms: x86_64
Building for target x86_64
Executing(%prep): /bin/sh -e /usr/src/tmp/rpm-tmp.70946
+ umask 022
+ /bin/mkdir -p /usr/src/RPM/BUILD
+ cd /usr/src/RPM/BUILD
+ cd /usr/src/RPM/BUILD
+ rm -rf pbm2lwxl-0
+ echo 'Source #0 (pbm2lwxl-0.tar):'
Source #0 (pbm2lwxl-0.tar):
+ /bin/tar -xf /usr/src/RPM/SOURCES/pbm2lwxl-0.tar
+ cd pbm2lwxl-0
+ /bin/chmod -c -Rf u+rwX,go-w .
+ echo 'Patch #0 (pbm2lwxl-20040515-mdk-path.patch):'
Patch #0 (pbm2lwxl-20040515-mdk-path.patch):
+ /usr/bin/patch -p1
patching file small2lwxl
patching file ps2lwxl
patching file txt2lwxl
+ exit 0
Executing(%build): /bin/sh -e /usr/src/tmp/rpm-tmp.70946
+ umask 022
+ /bin/mkdir -p /usr/src/RPM/BUILD
+ cd /usr/src/RPM/BUILD
+ cd pbm2lwxl-0
+ make 'CFLAGS=-pipe -frecord-gcc-switches -Wall -g -O2 -flto=auto'
make: Entering directory '/usr/src/RPM/BUILD/pbm2lwxl-0'
gcc -pipe -frecord-gcc-switches -Wall -g -O2 -flto=auto -o pbm2lwxl pbm2lwxl.c
pbm2lwxl.c:18:1: warning: "/*" within comment [-Wcomment]
   18 | /* You will probably want to use one or more of the following utilities */
pbm2lwxl.c:52:1: error: return type defaults to 'int' [-Wimplicit-int]
   52 | reset()
      | ^~~~~
pbm2lwxl.c:64:1: error: return type defaults to 'int' [-Wimplicit-int]
   64 | print_line(int n, unsigned char data[])
      | ^~~~~~~~~~
pbm2lwxl.c:87:1: error: return type defaults to 'int' [-Wimplicit-int]
   87 | form_feed()
      | ^~~~~~~~~
pbm2lwxl.c:92:1: error: return type defaults to 'int' [-Wimplicit-int]
   92 | set_label_length(int n)
      | ^~~~~~~~~~~~~~~~
pbm2lwxl.c:103:1: error: return type defaults to 'int' [-Wimplicit-int]
  103 | test()
      | ^~~~
pbm2lwxl.c:124:1: error: return type defaults to 'int' [-Wimplicit-int]
  124 | read_pbm_header(int *width_p, int *height_p)
      | ^~~~~~~~~~~~~~~
pbm2lwxl.c: In function 'read_pbm_header':
pbm2lwxl.c:139:10: error: implicit declaration of function 'strncmp' [-Wimplicit-function-declaration]
  139 |       if(strncmp(buf,"P1",2)==0) {
      |          ^~~~~~~
pbm2lwxl.c:43:1: note: include '<string.h>' or provide a declaration of 'strncmp'
   42 | #include <ctype.h>
  +++ |+#include <string.h>
   43 | 
pbm2lwxl.c:139:27: warning: 'strncmp' argument 3 type is 'int' where 'long unsigned int' is expected in a call to built-in function declared without prototype [-Wbuiltin-declaration-mismatch]
  139 |       if(strncmp(buf,"P1",2)==0) {
      |                           ^
<built-in>: note: built-in 'strncmp' declared here
pbm2lwxl.c:127:8: warning: variable 'found_type' set but not used [-Wunused-but-set-variable]
  127 |    int found_type;
      |        ^~~~~~~~~~
pbm2lwxl.c: At top level:
pbm2lwxl.c:203:1: error: return type defaults to 'int' [-Wimplicit-int]
  203 | main(int argc, char **argv)
      | ^~~~
pbm2lwxl.c: In function 'main':
pbm2lwxl.c:209:9: warning: unused variable 'buf' [-Wunused-variable]
  209 |    char buf[4096];
      |         ^~~
pbm2lwxl.c:208:8: warning: unused variable 'pos' [-Wunused-variable]
  208 |    int pos;
      |        ^~~
pbm2lwxl.c: In function 'reset':
pbm2lwxl.c:59:1: warning: control reaches end of non-void function [-Wreturn-type]
   59 | }
      | ^
pbm2lwxl.c: In function 'print_line':
pbm2lwxl.c:83:1: warning: control reaches end of non-void function [-Wreturn-type]
   83 | }
      | ^
pbm2lwxl.c: In function 'form_feed':
pbm2lwxl.c:90:1: warning: control reaches end of non-void function [-Wreturn-type]
   90 | }
      | ^
pbm2lwxl.c: In function 'set_label_length':
pbm2lwxl.c:99:1: warning: control reaches end of non-void function [-Wreturn-type]
   99 | }
      | ^
pbm2lwxl.c: In function 'test':
pbm2lwxl.c:122:1: warning: control reaches end of non-void function [-Wreturn-type]
  122 | }
      | ^
pbm2lwxl.c: In function 'read_pbm_header':
pbm2lwxl.c:157:1: warning: control reaches end of non-void function [-Wreturn-type]
  157 | }
      | ^
make: *** [Makefile:10: pbm2lwxl] Error 1
make: Leaving directory '/usr/src/RPM/BUILD/pbm2lwxl-0'
error: Bad exit status from /usr/src/tmp/rpm-tmp.70946 (%build)


RPM build errors:
    Bad exit status from /usr/src/tmp/rpm-tmp.70946 (%build)
Command exited with non-zero status 1
0.02user 0.04system 0:00.06elapsed 107%CPU (0avgtext+0avgdata 17060maxresident)k
0inputs+0outputs (0major+7698minor)pagefaults 0swaps
hsh-rebuild: rebuild of `pbm2lwxl-0-alt1.qa1.src.rpm' failed.
Command exited with non-zero status 1
0.77user 2.17system 0:05.41elapsed 54%CPU (0avgtext+0avgdata 11520maxresident)k
0inputs+0outputs (0major+84783minor)pagefaults 0swaps
